# llvm-project-embedded-library-in-process

./: CONTRIBUTING.md  README.md
.github/workflows/: automerge.yml  build-ci-container.yml  commit-access-greeter.yml  libcxx-build-and-test.yaml  llvm-tests.yml  pr-code-format.yml  premerge.yaml  release-binaries.yml  release-tasks.yml  scorecard.yml  sync_from_upstream.yml
arm-software/ci/: .automerge_ignore  automerge.py
arm-software/docs/: README.md  arm-toolchain-features.md  arm-toolchain-for-embedded-features.md  arm-toolchain-for-linux-features.md
arm-software/embedded/: .gitignore  CMakeLists.txt  README.md  versions.json
arm-software/embedded/arm-multilib/: CMakeLists.txt  multilib.yaml.in
arm-software/embedded/arm-runtimes/: CMakeLists.txt  meson-cross-build.txt.in
arm-software/embedded/cmake/: VERSION.txt.in  copy_target_libraries.py  fetch_newlib.cmake  fetch_picolibc.cmake  generate_version_txt.cmake  read_versions.cmake
arm-software/embedded/docs/: building-from-source.md  contributing.md  llvmlibc.md  migrating.md  newlib.md
arm-software/embedded/fvp/: get_fvps.sh
arm-software/embedded/llvmlibc-support/: CMakeLists.txt  crt0.c  exit.c  init.c  platform.h  semihost.h  stdio_read.c  stdio_write.c
arm-software/embedded/packagetest/: CMakeLists.txt  README.md
arm-software/embedded/samples/: Makefile.conf  README.md
arm-software/embedded/scripts/: build.bat  build.ps1  build.sh  build_llvmlibc_overlay.sh  build_newlib_overlay.sh  test.bat  test.ps1  test.sh
arm-software/linux/: README.md  build.sh  build.sh-HOWTO.md  mkmoduledirs.sh.var
(+88 files in other folders)
